--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "bugs": {
     "url": "https://github.com/nwimmer123/home_page_v_2/issues"
   },
-  "homepage": "https://github.com/nwimmer123/home_page_v_2#readme"
+  "homepage": "https://github.com/nwimmer123/home_page_v_2#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "html": "0.0.10",
+    "mongoose": "^4.5.8"
+  }
 }
