--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "html": "0.0.10",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "nodemon": "^1.10.0"
   }
 }
