--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "handlebars": "^4.0.5",
     "html": "0.0.10",
     "mongoose": "^4.5.8",
     "nodemon": "^1.10.0"
